--- a/.classpath
+++ b/.classpath
@@ -6,8 +6,8 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/mesjars/eclipselink-2.5.0.jar"/>
-	<classpathentry kind="lib" path="C:/mesjars/javax.persistence-2.1.0.jar"/>
 	<classpathentry kind="lib" path="C:/hsqldb-2.3.2/hsqldb/lib/hsqldb.jar"/>
+	<classpathentry kind="lib" path="C:/mes jar/eclipselink-2.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/mes jar/javax.persistence-2.1.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
